# jp-holidays

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-deploy-v1.yml  build-tests.yml  lib-examples-test.yaml  lib-integration-test.yaml  lib-unit-test.yaml  unit-tests.yml
crates/jp-holidays-lib/: Cargo.toml  README.md  execute-examples.sh
crates/jp-holidays-lib/examples/: basic.rs  cache.rs  get_holiday.rs  get_holiday_ymd.rs  is_day_off.rs  is_day_off_ymd.rs  is_holiday.rs  is_holiday_ymd.rs  list.rs  ymd.rs
crates/jp-holidays-lib/src/: client.rs  error.rs  lib.rs  repository.rs  service.rs
crates/jp-holidays-lib/tests/: integration.rs  shift-jis.csv  utf-8.csv
src/: date_format.rs  error.rs  fetch.rs  holiday.rs  main.rs  response.rs  response_list.rs  util.rs
