[package]
name = "jp-holidays"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
encoding_rs = "0.8.35"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.0"
tokio = { version = "1.41.1", features = ["full"] }
