[package]
name = "jp-holidays-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = "0.4.40"
encoding_rs = "0.8.35"
reqwest = { version = "0.12.15", features = [
    "rustls-tls",
], default-features = false }
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
