[package]
name = "jp-holidays-lib"
description = "Japanese holiday library for working with public holiday data in Rust."
version = "1.0.0"
edition = "2024"
authors = ["Chomolungma Shirayuki"]
repository = "https://github.com/46ki75/jp-holidays"
license = "MIT"
documentation = "https://docs.rs/jp-holidays-lib"
categories = ["date-and-time", "internationalization", "data-structures"]
keywords = ["japan", "holiday", "calendar", "datetime", "localization"]
readme = "README.md"


[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = "0.4.40"
encoding_rs = "0.8.35"
reqwest = { version = "0.12.15", features = [
    "rustls-tls",
], default-features = false }
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
